[tool.poetry]
name = "spotify-discovery"
version = "0.1.0"
description = ""
authors = ["Jack Zhang <junbojack@gmail.com>"]
readme = "README.md"
packages = [{include = "spotify_discovery"}]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.21.1"
fastapi = "^0.95.0"
pydantic = "^1.10.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
